--- a/MBCPLUS_DAEMON/packages.config
+++ b/MBCPLUS_DAEMON/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.Apis" version="1.32.1" targetFramework="net45" />
-  <package id="Google.Apis.Auth" version="1.32.1" targetFramework="net45" />
-  <package id="Google.Apis.Core" version="1.32.1" targetFramework="net45" />
-  <package id="Google.Apis.YouTube.v3" version="1.32.1.1079" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net45" />
+  <package id="Google.Apis" version="1.44.1" targetFramework="net45" />
+  <package id="Google.Apis.Auth" version="1.44.1" targetFramework="net45" />
+  <package id="Google.Apis.Core" version="1.44.1" targetFramework="net45" />
+  <package id="Google.Apis.YouTube.v3" version="1.44.1.1869" targetFramework="net45" />
+  <package id="Google.Apis.YouTubePartner.v1" version="1.35.1.1334" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
   <package id="NuGet.Client" version="4.2.0" targetFramework="net45" />
   <package id="NuGet.Common" version="4.2.0" targetFramework="net45" />
   <package id="NuGet.ContentModel" version="4.2.0" targetFramework="net45" />
@@ -15,6 +16,10 @@
   <package id="NuGet.Repositories" version="4.2.0" targetFramework="net45" />
   <package id="NuGet.RuntimeModel" version="4.2.0" targetFramework="net45" />
   <package id="NuGet.Versioning" version="4.2.0" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.1" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net46" />
   <package id="WinSCP" version="5.11.3" targetFramework="net45" />
 </packages>
