--- a/MBCPLUS_DAEMON/packages.config
+++ b/MBCPLUS_DAEMON/packages.config
@@ -5,21 +5,30 @@
   <package id="Google.Apis.Core" version="1.44.1" targetFramework="net45" />
   <package id="Google.Apis.YouTube.v3" version="1.44.1.1869" targetFramework="net45" />
   <package id="Google.Apis.YouTubePartner.v1" version="1.35.1.1334" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
+  <package id="Google.Protobuf" version="3.19.4" targetFramework="net46" />
+  <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net46" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net46" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net46" />
+  <package id="MySql.Data" version="8.0.31" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net46" />
   <package id="NuGet.Client" version="4.2.0" targetFramework="net45" />
-  <package id="NuGet.Common" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Common" version="4.2.0" targetFramework="net46" />
   <package id="NuGet.ContentModel" version="4.2.0" targetFramework="net45" />
-  <package id="NuGet.Frameworks" version="4.2.0" targetFramework="net45" />
-  <package id="NuGet.Packaging" version="4.2.0" targetFramework="net45" />
-  <package id="NuGet.Packaging.Core" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Frameworks" version="4.2.0" targetFramework="net46" />
+  <package id="NuGet.Packaging" version="4.2.0" targetFramework="net46" />
+  <package id="NuGet.Packaging.Core" version="4.2.0" targetFramework="net46" />
   <package id="NuGet.Packaging.Core.Types" version="4.2.0" targetFramework="net45" />
   <package id="NuGet.Repositories" version="4.2.0" targetFramework="net45" />
   <package id="NuGet.RuntimeModel" version="4.2.0" targetFramework="net45" />
-  <package id="NuGet.Versioning" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Versioning" version="4.2.0" targetFramework="net46" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net46" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net46" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net46" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net46" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net46" />
-  <package id="WinSCP" version="5.11.3" targetFramework="net45" />
+  <package id="WinSCP" version="5.11.3" targetFramework="net46" />
 </packages>
